--- a/Pagina.htm
+++ b/Pagina.htm
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-    <title>Minha primeira página web</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio : Luiz Fernando Andrade Avelino</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    *{
+        margin:0;
+        padding:0;
+        box-sizing: 0;
+    }
+    body{
+        width: 100vw;
+        height: 100vh;
+        background-image: url('./60e6a3b139c19327df3abf35691e53d1.jpg');
+        background-size: 100%;
+    }
+</style>
 <body>
-    <h1>Título da página</h1>
-    <p>Este é um parágrafo de texto.</p>
-    <img src="imagem.jpg" alt="Descrição da imagem">
-    <ul>
-        <li>Item 1 da lista</li>
-        <li>Item 2 da lista</li>
-        <li>Item 3 da lista</li>
-    </ul>
-    <a href="https://www.example.com">Link para outro site</a>
+        
+    <header>
+        <h1><center><b><font color= "#2F4F4F"; size="21">Bem Vindo!</font><br><font color= "#2F4F4F"; size="16"><marquee>Meu Portfólio Online</marquee></font></center></h1>
+        <!-- O uso da tag marquee é considerada obsoleta e não é mais recomendada para uso.-->
+    </header>
+
 </body>
 </html>
